<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewAdmin">

    <TextView
        android:id="@+id/titleAdminRegisterTextView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/register_new_admin_profile"
        android:textSize="42sp" />

    <EditText
        android:id="@+id/usernameAdminRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:autofillHints="Please enter a Username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordAdminRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordCheckAdminRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/registerAdminButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="8dp"
        android:text="@string/register"
        android:textSize="32sp" />

    <Button
        android:id="@+id/cancelRegisterAdminButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        android:textSize="32sp" />

</LinearLayout>