<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titleRegisterTextView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/create_your_account"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter a Username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleRegisterTextView" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameRegisterEditText" />

    <EditText
        android:id="@+id/passwordCheckRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegisterEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:text="@string/register"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCheckRegisterEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>