<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/landingTopBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/landingNameTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:gravity="end"
        android:text="MYNAME"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/landingTopBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/programmingButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:text="@string/programming"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landingNameTextView" />

    <Button
        android:id="@+id/cybersecurityButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/cybersecurity"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/programmingButton" />

    <Button
        android:id="@+id/circuitryButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/circuitry"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cybersecurityButton" />

    <Button
        android:id="@+id/networkingButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="Networking"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circuitryButton" />

    <Button
        android:id="@+id/satelliteButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="Satellite Uplink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/networkingButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/logout"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/satelliteButton" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/admin_panel"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>